--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
+    "isvalid": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "postcode-validator": "^3.7.0"
   }
 }
