--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "## Project - Books Management",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon src/index"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
     "express": "^4.18.1",
     "isvalid": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.4.3",
     "nodemon": "^2.0.19",
     "pincode-validator": "^1.0.3"
