--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.4.3",
-    "nodemon": "^2.0.19",
-    "pincode-validator": "^1.0.3"
+    "nodemon": "^2.0.19"
   }
 }
